# modules

./: pyproject.toml
.dev/: README.md  dev
.dev/devops/: Dockerfile
.dev/prototyping/: Dockerfile
.devcontainer/devops/: devcontainer.json
.github/: FUNDING.yml
.github/workflows/: lint_component.yml  test_component.yml
config/: resources.config
docs/astro/: convert_module.py  convert_subworkflow.py  keywords.py
modules/nf-neuro/betcrop/antsbet/: main.nf  meta.yml
modules/nf-neuro/betcrop/fslbetcrop/: main.nf  meta.yml
modules/nf-neuro/bundle/bundleparc/: meta.yml
modules/nf-neuro/bundle/coloring/: main.nf
modules/nf-neuro/bundle/fixelafd/: main.nf
modules/nf-neuro/bundle/recognize/: main.nf  meta.yml
modules/nf-neuro/bundle/uniformize/: main.nf
modules/nf-neuro/connectivity/afdfixel/: main.nf  meta.yml
modules/nf-neuro/connectivity/decompose/: main.nf
modules/nf-neuro/image/convert/: main.nf
subworkflows/nf-neuro/bundle_seg/: main.nf
subworkflows/nf-neuro/iit_roimetrics/: meta.yml
subworkflows/nf-neuro/magetbrain/: main.nf  meta.yml  modules.config  nextflow.config
subworkflows/nf-neuro/output_template_space/: main.nf
subworkflows/nf-neuro/preproc_dwi/: main.nf  meta.yml
subworkflows/nf-neuro/preproc_t1/: main.nf
subworkflows/nf-neuro/reconst_fw_noddi/: main.nf  meta.yml
subworkflows/nf-neuro/topup_eddy/: main.nf  meta.yml
subworkflows/nf-neuro/tractoflow/: main.nf  meta.yml  modules.config  nextflow.config
subworkflows/nf-neuro/tractometry/: main.nf
subworkflows/nf-neuro/utils_options/: main.nf  meta.yml
tests/: nextflow.config  test_data.json
tests/config/: nextflow.config
(+125 files in other folders)
