[build-system]

requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]

name = "nf-neuro"
version = "1.0.0"
description = "Tools for the NF-NEURO project"
license = "GPL-3.0-or-later"
readme = "README.md"

authors = ["The SCIL developers"]

maintainers = [
    "alex valcourt caron <alex.valcourt.caron@usherbrooke.ca>",
    "arnaud boré <arnaud.bore@gmail.com>"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

homepage = "https://scil.usherbrooke.ca/"

repository = "https://github.com/nf-neuro/modules.git"

packages = [{include = "docs"}]

include = ["docs/astro/templates/*.jinja2"]

[tool.poetry.dependencies]

python = "<3.13,>=3.10"
nf-core = "^3.3.2"

black = ">=26.3.1"
cryptography = ">=46.0.5"
filelock = ">=3.20.3"
isort = "^5.13.2"
pynacl = ">=1.6.2"
jinja2 = ">=3.1.6"
pdiff = "^1.1.4"
pillow = ">=12.1.1"
pyflakes = "^3.4.0"
pyjwt = ">=2.12.0"
pyyaml = {version = ">=6.0", optional = true}
setuptools = ">=78.1.1"
requests = ">=2.32.4"
urllib3 = ">=2.6.3"
virtualenv = ">=20.36.1"

[tool.poetry.extras]
docs = ["pyyaml"]

[tool.poetry.scripts]
nf-neuro-convert-module = "docs.astro.convert_module:main"
nf-neuro-convert-subworkflow = "docs.astro.convert_subworkflow:main"
